# Hyperion

./: CMakeLists.txt
cli/: CMakeLists.txt  main.cpp
cmake_modules/: cmake_utils.cmake  default_config.cmake  setup_mkl.cmake
utils/: CMakeLists.txt
utils/include/: random_number_generator.h  timing.h
utils/src/: random_number_generator.cpp
